2014-03-17  Will Newton  <will.newton@linaro.org>

	* sysdeps/generic/ldsodefs.h: Check whether
	HP_SMALL_TIMING_AVAIL is defined with #ifdef rather
	than #if.

	* nptl/sysdeps/pthread/pthread.h: Check
	__PTHREAD_MUTEX_HAVE_ELISION is defined before testing
	its value.

2014-03-17  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* libio/iofdopen.c (_IO_new_fdopen): Seek to end only if
	setting O_APPEND.
	* libio/tst-ftell-active-handler.c (do_append_test): Add a
	test case.

	[BZ #16680]
	* libio/fileops.c (_IO_file_open): Seek to end of file but
	don't cache the offset.
	(get_file_offset): Remove function.
	(do_ftell): Use cached offset when available.
	* libio/iofdopen.c (_IO_new_fdopen): Seek to end of file but
	don't cache the offset.
	* libio/tst-ftell-active-handler.c (do_rewind_test): New test
	case.
	(do_one_test): Call it.
	(do_ftell_test): Fix up expected old offset for a+ mode.
	* libio/wfileops.c (do_ftell_wide): Used cached offset when
	available.

	* libio/tst-ftell-active-handler.c (do_ftell_test): Don't mix
	up test status with function return status.
	(do_write_test): Likewise.
	(do_append_test): Likewise.

	* nptl/sysdeps/pthread/bits/libc-lockP.h [defined NOT_IN_libc
	&& !defined IS_IN_libpthread && __LT_SPINNOCK_INIT != 0]:
	Remove.

2014-03-17  Joseph Myers  <joseph@codesourcery.com>

	* math/gen-libm-test.pl (parse_args): Handle results specified for
	each rounding mode separately.
	* math/libm-test.inc (lrint_test_data): Merge in per-rounding-mode
	tests and results from lrint_tonearest_test_data,
	lrint_towardzero_test_data, lrint_downward_test_data and
	lrint_upward_test_data.
	(lrint_test): Use ALL_RM_TEST.
	(lrint_tonearest_test_data): Remove.
	(lrint_test_tonearest): Likewise.
	(lrint_towardzero_test_data): Likewise.
	(lrint_test_towardzero): Likewise.
	(lrint_downward_test_data): Likewise.
	(lrint_test_downward): Likewise.
	(lrint_upward_test_data): Likewise.
	(lrint_test_upward): Likewise.