@@ -624,7 +624,7 @@ _IO_old_init (fp, flags)
   fp->_IO_save_end = NULL;
   fp->_markers = NULL;
   fp->_cur_column = 0;
-#if _IO_JUMPS_OFFSET
+#ifdef _IO_JUMPS_OFFSET
   fp->_vtable_offset = 0;
 #endif
 #ifdef _IO_MTSAFE_IO
