@@ -2297,7 +2297,7 @@ buffered_vfprintf (_IO_FILE *s, const CHAR_T *format,
   hp->_mode = -1;
 #endif
   hp->_IO_file_flags = _IO_MAGIC|_IO_NO_READS|_IO_USER_LOCK;
-#if _IO_JUMPS_OFFSET
+#ifdef _IO_JUMPS_OFFSET
   hp->_vtable_offset = 0;
 #endif
 #ifdef _IO_MTSAFE_IO
